[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rl_mcts"]

[project]
name = "rl_mcts"
version = "0.0.1"
authors = [
  { name="Giovanni De Toni", email="giovanni.detoni@unitn.it" },
]
description = "Reinforcement Learning with MCTS (Structured Machine Learning Lab)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
