[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["recourse_fare"]

[project]
name = "recourse_fare"
version = "0.0.1"
authors = [
  { name="Giovanni De Toni", email="giovanni.detoni@unitn.it" },
]
description = "Algorithmic Recourse with Reinforcement Learning and MCTS (Structured Machine Learning Lab)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
